--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -149,8 +149,8 @@
       "imgs": [
         "assets/images/hands-game.png"
       ],
-      "ghLink": "https://github.com/andresjosehr/hands-game",
-      "demoLink": "https://proyectos.andresjosehr.com/hands-game",
+      "ghLink": "https://github.com/nati/hands-game",
+      "demoLink": "https://proyectos.nati.com/hands-game",
       "Technologies": [
         "Angular",
         "CSS GRID",
@@ -164,8 +164,8 @@
       "imgs": [
         "assets/images/countries-viewer.png"
       ],
-      "ghLink": "https://github.com/andresjosehr/countries-viewer",
-      "demoLink": "https://proyectos.andresjosehr.com/countries-viewer",
+      "ghLink": "https://github.com/nati/countries-viewer",
+      "demoLink": "https://proyectos.nati.com/countries-viewer",
       "Technologies": [
         "Angular",
         "RxJS",
@@ -179,8 +179,8 @@
     {
       "Title": "Pokemon",
       "Description": "Buscador de pokemons que utiliza la pokeapi. Se usó programación orientada a objetos para organizar la información de los pokemons junto con su respectiva imagen.",
-      "ghLink": "https://github.com/andresjosehr/pokemon-angular",
-      "demoLink": "https://proyectos.andresjosehr.com/pokemon-list",
+      "ghLink": "https://github.com/nati/pokemon-angular",
+      "demoLink": "https://proyectos.nati.com/pokemon-list",
       "Technologies": [
         "Angular",
         "RxJs",
@@ -191,8 +191,8 @@
     {
       "Title": "Coming soon page",
       "Description": "Proyecto personal de una página dividida de dos columnas para ser usado como 'Coming soon page'. Programada para ser totalmente responsive design. Cuenta con un campo de formulario para suscribirse por correo electrónico.",
-      "ghLink": "https://github.com/andresjosehr/coming-soon-page",
-      "demoLink": "https://proyectos.andresjosehr.com/coming-soon-page",
+      "ghLink": "https://github.com/nati/coming-soon-page",
+      "demoLink": "https://proyectos.nati.com/coming-soon-page",
       "Technologies": [
         "Angular",
         "SASS",
@@ -203,8 +203,8 @@
     {
       "Title": "Four card feature section",
       "Description": "Una sola página que cuenta con un diseño minimalista que enumera 4 características en 4 cards. Se usan animaciones de entrada con angular animations.",
-      "ghLink": "https://github.com/andresjosehr/fourd-card-feature-section",
-      "demoLink": "https://proyectos.andresjosehr.com/four-card-feature-section",
+      "ghLink": "https://github.com/nati/fourd-card-feature-section",
+      "demoLink": "https://proyectos.nati.com/four-card-feature-section",
       "Technologies": [
         "Angular",
         "SASS",
@@ -214,8 +214,8 @@
     {
       "Title": "Social proof section",
       "Description": "Proyecto personal de una página diseñada a partir de un diseño hecho en figma. Se utilizó angular para el desarrollo junto con SASS y CSS GRID.",
-      "ghLink": "https://github.com/andresjosehr/social-proof-section",
-      "demoLink": "https://proyectos.andresjosehr.com/social-proof-section",
+      "ghLink": "https://github.com/nati/social-proof-section",
+      "demoLink": "https://proyectos.nati.com/social-proof-section",
       "Technologies": [
         "Angular",
         "CSS GRID",
@@ -225,8 +225,8 @@
     {
       "Title": "FAQ accordion card",
       "Description": "Acordeón de preguntas frecuentes con lógica y animnaciones realizadas en Angular.",
-      "ghLink": "https://github.com/andresjosehr/faq-accordion",
-      "demoLink": "https://proyectos.andresjosehr.com/faq-accordion",
+      "ghLink": "https://github.com/nati/faq-accordion",
+      "demoLink": "https://proyectos.nati.com/faq-accordion",
       "Technologies": [
         "Angular",
         "CSS GRID",
@@ -236,8 +236,8 @@
     {
       "Title": "Profile card",
       "Description": "Simple diseño de una página que cuenta con una carta de perfil con información básica de una persona.",
-      "ghLink": "https://github.com/andresjosehr/profile-card-component",
-      "demoLink": "https://proyectos.andresjosehr.com/profile-card-component",
+      "ghLink": "https://github.com/nati/profile-card-component",
+      "demoLink": "https://proyectos.nati.com/profile-card-component",
       "Technologies": [
         "Angular",
         "SASS",
