--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
     "Header.Item3": "Projects",
     "Header.Item4": "Contact",
     "Header.cvBtn": "Resume",
-    "Header.cvName": "CV_Jose_Hernandez_Ingles.pdf",
+    "Header.cvName": "Nati_CV.pdf",
     "Banner.Pretitle": "Hello! My name is",
     "Banner.Description": "I have <span class='underline'>1+ years of experience</span> developing systems, interfaces, bots, and technological solutions to make the web a better place. I am dedicated to writing and refactoring clean, reusable, and scalable code in <span class='underline'>ASP.NET Core</span> and <span class='underline'>Angular</span> applying good practices and development standards.",
     "Banner.ActionBtn": "Get in touch",
